--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-},
+  },
   "dependencies": {
     "express": "^4.18.2",
     "init": "^0.1.2",
+    "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1"
